Upgrade Patterns 10-12 to 10+ container layouts and render in all aspect ratios

--- a/bento-box/index.html
+++ b/bento-box/index.html
@@ -5,70 +5,120 @@
   <title>Bento Box Showcase - Kadie Dev</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Global styles -->
   <link rel="stylesheet" href="../assets/css/base.css" />
   <link rel="stylesheet" href="../assets/css/layout.css" />
   <link rel="stylesheet" href="../assets/css/components.css" />
   <link rel="stylesheet" href="../assets/css/nav.css" />
   <link rel="stylesheet" href="../assets/css/footer.css" />
-  <!-- Bento specific -->
   <link rel="stylesheet" href="../assets/css/bento.css" />
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="home-section">
-    <div style="padding: 24px;">
-      <a href="../index.html" class="gradient-link secondary">← Back to Home</a>
-    </div>
+    <div style="padding:24px;"><a href="../index.html" class="gradient-link secondary">← Back to Home</a></div>
 
-    <!-- ===================== 1:1 SQUARE SET ===================== -->
-    <h2 style="text-align:center;font-family:var(--font-heading);margin:32px 0 8px;">Square 1:1 Bento Boxes</h2>
+    <h2 style="text-align:center;font-family:var(--font-heading);margin-bottom:24px;">Bento-Box Layouts Across Aspect Ratios</h2>
+    <p style="text-align:center;max-width:620px;margin:0 auto 40px;color:#555;font-family:var(--font-body);line-height:1.6;">Each row shows the same layout rendered as a square (1 : 1), a widescreen rectangle (16 : 9), and a tall portrait (9 : 16). Resize the window to see how every design scales.</p>
+
     <section class="bento-grid">
-      <!-- 9 square cards (3 rows) -->
+      <!-- Repeat for 12 patterns -->
+      <!-- Pattern 1 -->
       <article class="bento-card square"><div class="bento-inner pattern-1"><div class="bento-cell bc1">1-A</div><div class="bento-cell bc2">1-B</div><div class="bento-cell bc3">1-C</div><div class="bento-cell bc4">1-D</div></div></article>
-      <article class="bento-card square"><div class="bento-inner pattern-2"><div class="bento-cell bc5">Hero</div><div class="bento-cell bc6">Info</div><div class="bento-cell bc1">Action</div></div></article>
-      <article class="bento-card square"><div class="bento-inner pattern-3"><div class="bento-cell bc2">Banner</div><div class="bento-cell bc7">Gallery</div><div class="bento-cell bc3">Meta</div><div class="bento-cell bc4">Stat</div></div></article>
-      <article class="bento-card square"><div class="bento-inner pattern-4"><div class="bento-cell bc8">Header</div><div class="bento-cell bc9">Left</div><div class="bento-cell bc10">Right</div></div></article>
-      <article class="bento-card square"><div class="bento-inner pattern-5"><div class="bento-cell bc1">Center</div><div class="bento-cell bc2">Top</div><div class="bento-cell bc3">Left</div><div class="bento-cell bc4">Right</div><div class="bento-cell bc5">Bottom</div></div></article>
-      <article class="bento-card square"><div class="bento-inner pattern-6"><div class="bento-cell bc6">A</div><div class="bento-cell bc7">B</div><div class="bento-cell bc8">Footer</div></div></article>
-      <article class="bento-card square"><div class="bento-inner pattern-7"><div class="bento-cell bc9">Primary</div><div class="bento-cell bc4">1</div><div class="bento-cell bc3">2</div><div class="bento-cell bc2">3</div><div class="bento-cell bc1">4</div></div></article>
-      <article class="bento-card square"><div class="bento-inner pattern-8"><div class="bento-cell bc5">Top-Left</div><div class="bento-cell bc6">Top-Right</div><div class="bento-cell bc7">Mid-Left</div><div class="bento-cell bc8">Feature</div><div class="bento-cell bc9">Bottom-Left</div></div></article>
-      <article class="bento-card square"><div class="bento-inner pattern-9"><div class="bento-cell bc2">Side</div><div class="bento-cell bc3">Main</div><div class="bento-cell bc4">Side-Bottom</div></div></article>
-    </section>
-
-    <!-- ===================== 16:9 WIDE SET ===================== -->
-    <h2 style="text-align:center;font-family:var(--font-heading);margin:48px 0 8px;">Wide 16:9 Bento Boxes</h2>
-    <section class="bento-grid">
-      <article class="bento-card wide"><div class="bento-inner pattern-10"><div class="bento-cell bc1">Header</div><div class="bento-cell bc2">A</div><div class="bento-cell bc3">B</div><div class="bento-cell bc4">Footer</div></div></article>
-      <article class="bento-card wide"><div class="bento-inner pattern-11"><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div></div></article>
-      <article class="bento-card wide"><div class="bento-inner pattern-12"><div class="bento-cell bc6">Banner</div><div class="bento-cell bc7">Highlight</div><div class="bento-cell bc8">Detail</div><div class="bento-cell bc9">Meta</div></div></article>
       <article class="bento-card wide"><div class="bento-inner pattern-1"><div class="bento-cell bc1">1-A</div><div class="bento-cell bc2">1-B</div><div class="bento-cell bc3">1-C</div><div class="bento-cell bc4">1-D</div></div></article>
-      <article class="bento-card wide"><div class="bento-inner pattern-3"><div class="bento-cell bc2">Banner</div><div class="bento-cell bc7">Gallery</div><div class="bento-cell bc3">Meta</div><div class="bento-cell bc4">Stat</div></div></article>
-      <article class="bento-card wide"><div class="bento-inner pattern-5"><div class="bento-cell bc1">Center</div><div class="bento-cell bc2">Top</div><div class="bento-cell bc3">Left</div><div class="bento-cell bc4">Right</div><div class="bento-cell bc5">Bottom</div></div></article>
+      <article class="bento-card tall"><div class="bento-inner pattern-1"><div class="bento-cell bc1">1-A</div><div class="bento-cell bc2">1-B</div><div class="bento-cell bc3">1-C</div><div class="bento-cell bc4">1-D</div></div></article>
+
+      <!-- Pattern 2 -->
+      <article class="bento-card square"><div class="bento-inner pattern-2"><div class="bento-cell bc5">Hero</div><div class="bento-cell bc6">Info</div><div class="bento-cell bc1">Action</div></div></article>
       <article class="bento-card wide"><div class="bento-inner pattern-2"><div class="bento-cell bc5">Hero</div><div class="bento-cell bc6">Info</div><div class="bento-cell bc1">Action</div></div></article>
+      <article class="bento-card tall"><div class="bento-inner pattern-2"><div class="bento-cell bc5">Hero</div><div class="bento-cell bc6">Info</div><div class="bento-cell bc1">Action</div></div></article>
+
+      <!-- Pattern 3 -->
+      <article class="bento-card square"><div class="bento-inner pattern-3"><div class="bento-cell bc2">Banner</div><div class="bento-cell bc7">Gallery</div><div class="bento-cell bc3">Meta</div><div class="bento-cell bc4">Stat</div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-3"><div class="bento-cell bc2">Banner</div><div class="bento-cell bc7">Gallery</div><div class="bento-cell bc3">Meta</div><div class="bento-cell bc4">Stat</div></div></article>
+      <article class="bento-card tall"><div class="bento-inner pattern-3"><div class="bento-cell bc2">Banner</div><div class="bento-cell bc7">Gallery</div><div class="bento-cell bc3">Meta</div><div class="bento-cell bc4">Stat</div></div></article>
+
+      <!-- Pattern 4 -->
+      <article class="bento-card square"><div class="bento-inner pattern-4"><div class="bento-cell bc8">Header</div><div class="bento-cell bc9">Left</div><div class="bento-cell bc10">Right</div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-4"><div class="bento-cell bc8">Header</div><div class="bento-cell bc9">Left</div><div class="bento-cell bc10">Right</div></div></article>
+      <article class="bento-card tall"><div class="bento-inner pattern-4"><div class="bento-cell bc8">Header</div><div class="bento-cell bc9">Left</div><div class="bento-cell bc10">Right</div></div></article>
+
+      <!-- Pattern 5 -->
+      <article class="bento-card square"><div class="bento-inner pattern-5"><div class="bento-cell bc1">Center</div><div class="bento-cell bc2">Top</div><div class="bento-cell bc3">Left</div><div class="bento-cell bc4">Right</div><div class="bento-cell bc5">Bottom</div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-5"><div class="bento-cell bc1">Center</div><div class="bento-cell bc2">Top</div><div class="bento-cell bc3">Left</div><div class="bento-cell bc4">Right</div><div class="bento-cell bc5">Bottom</div></div></article>
+      <article class="bento-card tall"><div class="bento-inner pattern-5"><div class="bento-cell bc1">Center</div><div class="bento-cell bc2">Top</div><div class="bento-cell bc3">Left</div><div class="bento-cell bc4">Right</div><div class="bento-cell bc5">Bottom</div></div></article>
+
+      <!-- Pattern 6 -->
+      <article class="bento-card square"><div class="bento-inner pattern-6"><div class="bento-cell bc6">A</div><div class="bento-cell bc7">B</div><div class="bento-cell bc8">Footer</div></div></article>
       <article class="bento-card wide"><div class="bento-inner pattern-6"><div class="bento-cell bc6">A</div><div class="bento-cell bc7">B</div><div class="bento-cell bc8">Footer</div></div></article>
-      <article class="bento-card wide"><div class="bento-inner pattern-8"><div class="bento-cell bc5">Top-Left</div><div class="bento-cell bc6">Top-Right</div><div class="bento-cell bc7">Mid-Left</div><div class="bento-cell bc8">Feature</div><div class="bento-cell bc9">Bottom-Left</div></div></article>
-    </section>
+      <article class="bento-card tall"><div class="bento-inner pattern-6"><div class="bento-cell bc6">A</div><div class="bento-cell bc7">B</div><div class="bento-cell bc8">Footer</div></div></article>
 
-    <!-- ===================== 9:16 TALL SET ===================== -->
-    <h2 style="text-align:center;font-family:var(--font-heading);margin:48px 0 8px;">Tall 9:16 Bento Boxes</h2>
-    <section class="bento-grid">
-      <!-- 8 tall cards now -->
-      <article class="bento-card tall"><div class="bento-inner pattern-4"><div class="bento-cell bc1">Header</div><div class="bento-cell bc2">Content</div><div class="bento-cell bc3">Footer</div></div></article>
-      <article class="bento-card tall"><div class="bento-inner pattern-2"><div class="bento-cell bc4">Image</div><div class="bento-cell bc5">Text</div><div class="bento-cell bc6">CTA</div></div></article>
-      <article class="bento-card tall"><div class="bento-inner pattern-5"><div class="bento-cell bc7">Top</div><div class="bento-cell bc8">Focus</div><div class="bento-cell bc9">Bottom</div><div class="bento-cell bc10">More</div><div class="bento-cell bc1">Extra</div></div></article>
-      <article class="bento-card tall"><div class="bento-inner pattern-1"><div class="bento-cell bc2">A</div><div class="bento-cell bc3">B</div><div class="bento-cell bc4">C</div><div class="bento-cell bc5">D</div></div></article>
-      <article class="bento-card tall"><div class="bento-inner pattern-6"><div class="bento-cell bc6">Hero</div><div class="bento-cell bc7">Sub</div><div class="bento-cell bc8">Footer</div></div></article>
-      <article class="bento-card tall"><div class="bento-inner pattern-3"><div class="bento-cell bc9">Banner</div><div class="bento-cell bc2">Info</div><div class="bento-cell bc3">Meta</div><div class="bento-cell bc4">Stats</div></div></article>
-      <!-- new tall designs -->
-      <article class="bento-card tall"><div class="bento-inner pattern-11"><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div><div class="bento-cell"></div></div></article>
-      <article class="bento-card tall"><div class="bento-inner pattern-12"><div class="bento-cell bc6">Banner</div><div class="bento-cell bc7">Highlight</div><div class="bento-cell bc8">Detail</div><div class="bento-cell bc9">Meta</div></div></article>
-    </section>
+      <!-- Pattern 7 -->
+      <article class="bento-card square"><div class="bento-inner pattern-7"><div class="bento-cell bc9">Primary</div><div class="bento-cell bc4">1</div><div class="bento-cell bc3">2</div><div class="bento-cell bc2">3</div><div class="bento-cell bc1">4</div></div></article>
+      <article class="bento-card wide"><div class="bento-inner pattern-7"><div class="bento-cell bc9">Primary</div><div class="bento-cell bc4">1</div><div class="bento-cell bc3">2</div><div class="bento-cell bc2">3</div><div class="bento-cell bc1">4</div></div></article>
+      <article class="bento-card tall"><div class="bento-inner pattern-7"><div class="bento-cell bc9">Primary</div><div class="bento-cell bc4">1</div><div class="bento-cell bc3">2</div><div class="bento-cell bc2">3</div><div class="bento-cell bc1">4</div></div></article>
 
-    <div class="last-updated" style="text-align:center; margin:64px 0 48px;">Jan '26</div>
-  </div>
-</body>
-</html>
+<!-- Pattern 8 -->
+<article class="bento-card square"><div class="bento-inner pattern-8">
+    <div class="bento-cell bc5">Top-Left</div><div class="bento-cell bc6">Top-Right</div>
+    <div class="bento-cell bc7">Mid-Left</div><div class="bento-cell bc8">Feature</div>
+    <div class="bento-cell bc9">Bottom-Left</div>
+  </div></article>
+  <article class="bento-card wide"><div class="bento-inner pattern-8">
+    <!-- same cells -->
+    <div class="bento-cell bc5">Top-Left</div><div class="bento-cell bc6">Top-Right</div>
+    <div class="bento-cell bc7">Mid-Left</div><div class="bento-cell bc8">Feature</div>
+    <div class="bento-cell bc9">Bottom-Left</div>
+  </div></article>
+  <article class="bento-card tall"><div class="bento-inner pattern-8">
+    <div class="bento-cell bc5">Top-Left</div><div class="bento-cell bc6">Top-Right</div>
+    <div class="bento-cell bc7">Mid-Left</div><div class="bento-cell bc8">Feature</div>
+    <div class="bento-cell bc9">Bottom-Left</div>
+  </div></article>
+  
+  <!-- Pattern 9 -->
+  <article class="bento-card square"><div class="bento-inner pattern-9">
+    <div class="bento-cell bc2">Side</div><div class="bento-cell bc3">Main</div>
+    <div class="bento-cell bc4">Side-Bottom</div>
+  </div></article>
+  <article class="bento-card wide"><div class="bento-inner pattern-9">
+    <div class="bento-cell bc2">Side</div><div class="bento-cell bc3">Main</div>
+    <div class="bento-cell bc4">Side-Bottom</div>
+  </div></article>
+  <article class="bento-card tall"><div class="bento-inner pattern-9">
+    <div class="bento-cell bc2">Side</div><div class="bento-cell bc3">Main</div>
+    <div class="bento-cell bc4">Side-Bottom</div>
+  </div></article>
+  
+<!-- ======== Pattern 10 – 12-cell DASHBOARD ======== -->
+<article class="bento-card square"><div class="bento-inner pattern-10">
+    <div class="bento-cell bc1">Hero</div><div class="bento-cell bc2">A</div>
+    <div class="bento-cell bc3">B</div><div class="bento-cell bc4">C</div>
+    <div class="bento-cell bc5">D</div><div class="bento-cell bc6">E</div>
+    <div class="bento-cell bc7">F</div><div class="bento-cell bc8">G</div>
+    <div class="bento-cell bc9">H</div><div class="bento-cell bc10">Chart</div>
+  </div></article>
+  
+  <!-- ======== Pattern 11 – 16-cell CHECKERBOARD (unchanged) ======== -->
+  
+  <!-- ======== Pattern 12 – 11-cell SPIRAL ======== -->
+  <article class="bento-card square"><div class="bento-inner pattern-12">
+    <div class="bento-cell bc1">Top</div><div class="bento-cell bc2">1</div>
+    <div class="bento-cell bc3">2</div><div class="bento-cell bc4">3</div>
+    <div class="bento-cell bc5">4</div><div class="bento-cell bc6">5</div>
+    <div class="bento-cell bc7">6</div><div class="bento-cell bc8">7</div>
+    <div class="bento-cell bc9">8</div><div class="bento-cell bc10">Center</div>
+    <div class="bento-cell bc5">9</div>
+  </div></article>
+  
+  <!-- Pattern 13 – Hero + 6 Stats -->
+  <article class="bento-card square"><div class="bento-inner pattern-13">
+    <div class="bento-cell bc6">Hero</div><div class="bento-cell bc1">S-1</div>
+    <div class="bento-cell bc2">S-2</div><div class="bento-cell bc3">S-3</div>
+    <div class="bento-cell bc4">S-4</div><div class="bento-cell bc5">Overview</div>
+  </div></article>
+  
+  <!-- Pattern 14 – Big Center Mosaic -->
+  <article class="bento-card square"><div class="bento-inner pattern-14">
+    <div class="bento-cell bc8">Header</div><div class="bento-cell bc1">Left</div>
+    <div class="bento-cell bc2">Mid</div><div class="bento-cell bc3">Right</div>
+    <div class="bento-cell bc4">Callout</div><div class="bento-cell bc5">Footer</div>
+  </div></article>
