--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
   <!-- Spline Viewer Script -->
-  <script type="module" src="https://unpkg.com/@splinetool/viewer@0.9.461/build/spline-viewer.js"></script>
+  <script type="module" src="assets/js/nodding-animation.js"></script>
   
 </head>
 
@@ -174,12 +174,7 @@
           
           <!-- Spline 3D Scene - Bottom Right Corner on Desktop, Right of Hero on Mobile -->
           <div class="spline-viewer-container">
-            <spline-viewer
-              url="https://prod.spline.design/FaL6Mf-9kilRQg91/scene.splinecode"
-              background="transparent"
-              hideUI
-              style="width: 100%; height: 100%;">
-            </spline-viewer>
+            <canvas id="spline-canvas" style="width: 100%; height: 100%;"></canvas>
           </div>
         </div>
       </div>
@@ -248,48 +243,6 @@
 
   <script src="assets/js/hovervideo.js" type="text/javascript"></script>
   <script src="assets/js/responsive-preview.js" type="text/javascript"></script>
-
-  <script>
-    // Hide Spline logo badge after viewer loads
-    document.addEventListener('DOMContentLoaded', () => {
-      const viewer = document.querySelector('spline-viewer');
-      if (viewer) {
-        // Function to hide logo in shadow DOM
-        const hideLogo = () => {
-          const shadowRoot = viewer.shadowRoot;
-          if (shadowRoot) {
-            // Hide the logo by ID
-            const logo = shadowRoot.getElementById('logo');
-            if (logo) {
-              logo.style.display = 'none';
-              logo.style.visibility = 'hidden';
-              logo.style.opacity = '0';
-              logo.style.pointerEvents = 'none';
-              logo.remove(); // Remove from DOM entirely
-            }
-
-            // Also hide any links to spline.design
-            const splineLinks = shadowRoot.querySelectorAll('a[href*="spline.design"]');
-            splineLinks.forEach(link => {
-              link.style.display = 'none';
-              link.remove();
-            });
-          }
-        };
-
-        // Try immediately
-        hideLogo();
-
-        // Try after viewer loads
-        viewer.addEventListener('load', hideLogo);
-
-        // Try with a delay as fallback
-        setTimeout(hideLogo, 500);
-        setTimeout(hideLogo, 1000);
-        setTimeout(hideLogo, 2000);
-      }
-    });
-  </script>
 
 </body>
 </html>
